# LibSee

./: .clang-format  .gitignore  .releaserc  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  libsee.c  libsee.py
.github/workflows/: prerelease.yml  release.yml  update_version.sh
